--- a/tests/dummy/app/templates/content.hbs
+++ b/tests/dummy/app/templates/content.hbs
@@ -12,7 +12,7 @@ locking = false
             <input tabindex="0" value ="bob">
         </div>
       <div style="text-align:right;">
-          {{nb-menu-button  icon=(build-icon "volume" "grey") type="flat-icon" text="show dialog" }}
+          {{nb-menu-button menu="test-menu" icon=(build-icon "volume" "grey") type="flat-icon" text="show dialog" }}
      {{nb-button id="tether-me" type="flat-text" text="show dialog" on-tap=(route-action "showDialog")}}
 
         </div>
